# SmaxKernels

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-all-compilers.yml  cmake-single-platform.yml
applications/: CMakeLists.txt
applications/gauss_seidel/: CMakeLists.txt  gauss_seidel.cpp  utils.hpp
applications/test_app/: CMakeLists.txt  test.cpp
benchmarks/: CMakeLists.txt
benchmarks/eigen_benchmarks/: CMakeLists.txt
benchmarks/petsc_benchmarks/: petsc_benchmarks_common.hpp
benchmarks/smax_benchmarks/: CMakeLists.txt
benchmarks/trilinos_benchmarks/: CMakeLists.txt  trilinos_benchmarks_common.hpp  trilinos_spmv.cpp
cmake/: Config.cmake.in  smax_config.hpp.in
examples/: CMakeLists.txt  examples_common.hpp  gs_helpers.hpp  matrix_structs.hpp  mmio.cpp  mmio.hpp  permutation_helpers.hpp  spgemm_helpers.hpp  spmm_helpers.hpp  spmv_helpers.hpp  sptrsm_helpers.hpp  sptrsv_helpers.hpp  sptrsv_lvl_helpers.hpp
examples/applications/: CMakeLists.txt  applications_common.hpp
examples/applications/gauss_seidel/: CMakeLists.txt  gauss_seidel.cpp  utils.hpp
examples/applications/jacobi/: CMakeLists.txt  jacobi.cpp  utils.hpp
examples/benchmarks/: CMakeLists.txt  benchmarks_common.hpp  timing.cpp  timing.hpp
examples/benchmarks/cusparse_benchmarks/: CMakeLists.txt  cusparse_SELL_spmv_bench.cpp  cusparse_bcrs_spmv_bench.cpp  cusparse_benchmarks_common.hpp  cusparse_crs_spmm_bench.cpp  cusparse_crs_spmv_bench.cpp  cusparse_csr_spmm_bench.cpp  cusparse_csr_spmv_bench.cpp
examples/benchmarks/eigen_benchmarks/: CMakeLists.txt  eigen_benchmarks_common.hpp  eigen_spgemm.cpp  eigen_spgemm_bench.cpp  eigen_spmm.cpp  eigen_spmm_bench.cpp  eigen_spmv.cpp  eigen_spmv_bench.cpp  eigen_sptrsm.cpp  eigen_sptrsm_bench.cpp  eigen_sptrsv.cpp  eigen_sptrsv_bench.cpp
examples/benchmarks/mkl_benchmarks/: CMakeLists.txt  mkl_benchmarks_common.hpp  mkl_spgemm.cpp  mkl_spgemm_bench.cpp  mkl_spmm.cpp  mkl_spmm_bench.cpp  mkl_spmv.cpp  mkl_spmv_bench.cpp  mkl_sptrsm.cpp  mkl_sptrsm_bench.cpp  mkl_sptrsv.cpp  mkl_sptrsv_bench.cpp
examples/benchmarks/petsc_benchmarks/: CMakeLists.txt  petsc_benchmarks_common.hpp  petsc_spgemm.cpp  petsc_spgemm_bench.cpp  petsc_spmm.cpp  petsc_spmm_bench.cpp  petsc_spmv.cpp  petsc_spmv_bench.cpp  petsc_sptrsm_bench.cpp  petsc_sptrsv.cpp  petsc_sptrsv_bench.cpp
examples/benchmarks/smax_benchmarks/: CMakeLists.txt  smax_bcrs_cuda_spmv_bench.cpp  smax_benchmarks_common.hpp  smax_crs_cuda_spmv.cpp  smax_crs_cuda_spmv_bench.cpp  smax_crs_spmv.cpp  smax_crs_spmv_bench.cpp  smax_fused_spgemm.cpp  smax_fused_spgemm_bench.cpp  smax_scs_cuda_spmv_bench.cpp  smax_scs_spmv.cpp  smax_scs_spmv_bench.cpp  smax_spgemm.cpp  smax_spgemm_bench.cpp  smax_spmm.cpp  smax_spmm_bench.cpp  smax_spmv.cpp  smax_sptrsm.cpp  smax_sptrsm_bench.cpp  smax_sptrsv.cpp  smax_sptrsv_bench.cpp  smax_sptrsv_lvl.cpp  smax_sptrsv_lvl_bench.cpp
examples/cmake/: CPM.cmake  eigen.cmake  fastmmio.cmake
examples/demos/: CMakeLists.txt  spgemmAA_demo.cpp  spgemmAB_demo.cpp  spmm_demo.cpp  spmv_bcrs_demo.cpp  spmv_bcsr_demo.cpp  spmv_cuda_bcrs_demo.cpp  spmv_cuda_crs_demo.cpp  spmv_cuda_demo.cpp  spmv_cuda_scs_demo.cpp  spmv_demo.cpp  spmv_scs_demo.cpp  sptrsm_demo.cpp  sptrsv_demo.cpp  sptrsv_lvl_demo.cpp
examples/tests/: .CMakeLists.txt  CMakeLists.txt  build_symmetric_crs_1.hpp  build_symmetric_crs_2.hpp  build_symmetric_crs_3.hpp  build_symmetric_csr_1.hpp  build_symmetric_csr_2.hpp  build_symmetric_csr_3.hpp  error.txt  perm_test_1.hpp  perm_test_2.hpp  run_tests.cpp.in  spgemmAA_test.cpp  spgemmAA_test.hpp  spgemmAB_test.cpp  spgemmAB_test.hpp  spgemv_test.cpp  spmm_rowmaj_test.hpp  spmm_test.cpp  spmm_test.hpp  spmv_bcrs_1_1_test_1.hpp  spmv_bcrs_1_1_test_2.hpp  spmv_bcrs_1_1_test_3.hpp  spmv_bcrs_laplace_test.hpp  spmv_bcsr_1_1_test_1.hpp  spmv_scs_1_1_test.hpp  spmv_scs_1_1_test_1.hpp  spmv_scs_1_1_test_2.hpp  spmv_scs_1_4_test_1.hpp  spmv_scs_2_1_test_1.hpp  spmv_scs_2_1_test_2.hpp  spmv_scs_2_4_test_1.hpp  spmv_scs_4_1_test_1.hpp  spmv_scs_4_1_test_2.hpp  spmv_scs_4_4_test_1.hpp  spmv_test.cpp  spmv_test.hpp  sptrsm_rowmaj_test.hpp  sptrsm_test.cpp  sptrsm_test.hpp  (+10 more)
examples/validation/: CMakeLists.txt  validate_crs_spmv.cpp  validate_gs_step_lvl.cpp  validate_scs_spmv.cpp  validate_spgemm.cpp  validate_spmm.cpp  validate_spmv.cpp  validate_sptrsm.cpp  validate_sptrsv.cpp  validate_sptrsv_lvl.cpp  validation_common.hpp
examples/validation/cusparse/: CMakeLists.txt  cusparse_bcrs_spmv_validate.cpp  cusparse_validation_common.hpp
examples/validation/mkl/: CMakeLists.txt  mkl_bcrs_spmv_validate.cpp  mkl_crs_spmv_validate.cpp  mkl_gs_step_lvl_validate.cpp  mkl_scs_spmv_validate.cpp  mkl_spgemm_validate.cpp  mkl_spmm_validate.cpp  mkl_sptrsm_validate.cpp  mkl_sptrsv_lvl_validate.cpp  mkl_sptrsv_validate.cpp
src/: common.hpp  error_handler.cpp  error_handler.hpp  interface.cpp  interface.hpp  kernel.hpp  macros.hpp  memory_utils.hpp  stopwatch.hpp  unset_defines.hpp  utils.hpp
src/kernels/: bspmv.hpp  kernels_common.hpp  spgemm.hpp  spgemv.hpp  spmm.hpp  spmv.hpp  sptrsm.hpp  sptrsv.hpp  sptsv.hpp
src/kernels/bspmv/: bspmv_common.hpp  bspmv_cpu.hpp  bspmv_cuda.hpp
src/kernels/bspmv/bspmv_cpu/: bspmv_cpu_bcrs_impl.hpp  bspmv_cpu_core.hpp
src/kernels/bspmv/bspmv_cuda/: bspmv_cuda_bcrs_impl.cu  bspmv_cuda_bcrs_impl.cuh  bspmv_cuda_core.cuh
src/kernels/spgemm/: spgemm_common.hpp  spgemm_cpu.hpp
src/kernels/spgemm/spgemm_cpu/: lvl_fused_core.hpp  (+8 more)
src/kernels/spgemv/: spgemv_common.hpp  spgemv_cpu.hpp
src/kernels/spmm/: spmm_common.hpp  spmm_cpu.hpp
src/kernels/spmv/: spmv_common.hpp  spmv_cpu.hpp  spmv_cuda.cuh  spmv_cuda.hpp
src/kernels/sptrsm/: sptrsm_common.hpp  sptrsm_cpu.hpp
src/kernels/sptrsv/: sptrsv_common.hpp  sptrsv_cpu.hpp
src/kernels/sptsv/: sptsv_common.hpp  sptsv_cpu.hpp
src/matrices/: COOmatrix.hpp  sparse_matrix_base.hpp
src/utils/: convert_formats.hpp  helpers.hpp  permutation.hpp  permutation_impl.hpp  permutations.hpp  timers.hpp  utils_common.hpp
tests/: CMakeLists.txt  Makefile  config.mk  test1.cpp  test2.cpp
(+27 files in other folders)
